name: silently
version: 1.1.5
cabal-version: >= 1.8
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (c) Trystan Spangler 2011
maintainer: trystan.s@comcast.net
stability:
homepage: https://github.com/trystan/silently
package-url: https://github.com/trystan/silently
bug-reports: https://github.com/trystan/silently/issues
synopsis: Prevent or capture writing to stdout and other handles.
description: Prevent or capture writing to stdout and other handles.
category:
author: Trystan Spangler
tested-with: GHC ==7.0
extra-source-files:
  src/windows/System/IO/Silently.hs
  src/unix/System/IO/Silently.hs
  src/other/System/IO/Silently.hs

source-repository head
  type: git
  location: https://github.com/trystan/silently

Library
  build-depends:
      base >=4 && <=5
    , directory
    , deepseq
  exposed-modules: System.IO.Silently
  exposed: True
  buildable: True

  hs-source-dirs:
      src

  if os(windows)
    cpp-options: -DWINDOWS
  if os(linux) || os(osx) || os(freebsd) || os(openbsd) || os(netbsd)
    cpp-options: -DUNIX

test-suite spec-windows
  main-is:
      Spec.hs
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -threaded
      -- FIXME: use -Werror
      -- -Wall -Werror -threaded
  hs-source-dirs:
      src
    , test

  if os(windows)
    cpp-options: -DWINDOWS
  else
    buildable: False

  build-depends:
      base
    , hspec-shouldbe
    , directory
    , deepseq

test-suite spec-unix
  main-is:
      Spec.hs
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -threaded
      -- FIXME: use -Werror
      -- -Wall -Werror -threaded
  hs-source-dirs:
      src
    , test

  if os(linux) || os(osx) || os(freebsd) || os(openbsd) || os(netbsd)
    cpp-options: -DUNIX
  else
    buildable: False

  build-depends:
      base
    , hspec-shouldbe
    , directory
    , deepseq

test-suite spec-generic
  main-is:
      Spec.hs
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -threaded
      -- FIXME: use -Werror
      -- -Wall -Werror -threaded
  hs-source-dirs:
      src
    , test

  build-depends:
      base
    , hspec-shouldbe
    , directory
    , deepseq
